# tai-connector-atlassian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  tai-plugin.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/tai42_connector/atlassian/: __init__.py
src/tai42_connector/atlassian/core/: connector.py
src/tai_connector/atlassian/: __init__.py  tai-plugin.yml
src/tai_connector/atlassian/core/: __init__.py  connector.py
tests/: conftest.py  test_connector.py  test_import_graph.py  test_plugin_spec.py
